--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "github-pages": "^3.0.2"
   },
   "scripts": {
-    "deploy": "gh-pages -d ./"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "gh-pages": "^6.3.0"
