fourth to deploy

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "github-pages": "^3.0.2"
   },
   "scripts": {
-    "deploy": "gh-pages -d build"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
   "dependencies": {
     "gh-pages": "^6.3.0"
   }
